# xltablediff

./: LICENSE  README.md  accepttests.bash  pyproject.toml  runtests.bash  test1.xlsx  test1append.xlsx  test1diff-expected.xlsx  test1diff.xlsx  test1ignore-expected.xlsx  test1ignore.xlsx  test1in.xlsx  test1merge-expected.xlsx  test1merge.xlsx  test1new.xlsx  test1newAppend-expected.xlsx  test1newAppend.xlsx  test1old.xlsx  test1oldAppend-expected.xlsx  test1oldAppend.xlsx  test1out.xlsx  test1replace.xlsx  test2old.xlsx  test3new.xlsx  test3old.xlsx  xltablediff.py
src/xltablediff/: test1diff-expected.xlsx  test1diff.xlsx  test1ignore-expected.xlsx  test1new.xlsx  test1newAppend-expected.xlsx  test1old.xlsx  test1replace-expected.xlsx  test2diff.xlsx  test2new.xlsx  test3diff.xlsx  xltablediff.py
