[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xltablediff"
version = "0.0.1"
description = "Scripts to visualize the differences between spreadsheets"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["openpyxl==3.1.3"]

[project.scripts]
xltablediff = "xltablediff.xltablediff:main"
